--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ pip-log.txt
 build/win32/pyi/build/
 build/win32/pyi/dist/
 build/win32/innosetup/dist/
+config/fontList.cache
+config/last-session.ini
+config/tex.cache
